fixed some references

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -68,7 +68,7 @@ This can result in a range of diseases including but not limited to cystic fibro
 % Needs references and a figure showing rate of globular proteins and membrane proteins.
 Because of the experimental hindrance, \gls{tmp} biology has been relatively slow to emerge.
 Throughout the 1990s the concept of a \gls{tmh} was simple and fairly assured: they were greasy peptides of around 30{\AA} in length, often bundled together and oriented perpendicularly to the membrane \cite{VonHeijne2006}.
-By 2007, crystallography had elucidated 368 \gls{tmp} structures from 148 unique proteins \cite{Carpenter2007}.
+By 2007, crystallography had elucidated 368 \gls{tmp} structures from 148 unique proteins \cite{Carpenter2008}.
 Whilst this accumulation of structures was exponential, at the same time, there were in excess of 50,000 protein structures in the PDB.
 Although the classic \gls{tmh} structures were broadly prevalent, these structures contained a plethora of unusual \gls{tmh}s.
 \gls{tms}s are capable of partial spanning of the membrane, spanning using oblique angles, and even lying flat on the membrane surface~\cite{VonHeijne2006, Elofsson2007}; the classical model was incomplete.
@@ -102,7 +102,7 @@ Firstly, improvements in expression and purification occurred thanks to cleavabl
 \label{fig:revolution}
 \end{figure}
 
-Since the folding of the \gls{tmp} often depends on the lipid environment and finding conditions that encourage protein stability was shown to improve crystallisation \cite{Carpenter2007, Rosenbusch2001}.
+Since the folding of the \gls{tmp} often depends on the lipid environment and finding conditions that encourage protein stability was shown to improve crystallisation \cite{Carpenter2008, Rosenbusch2001}.
 The technology behind nanodiscs was originally published in 2002 \cite{Bayburt2002}.
 The structure of the nanodisc is formed from two scaffold peptide helices wrapped around a group of self\--associating phospholipids (Figure \ref{fig:revolution}A).
 The method was originally shown to be a viable method for obtaining native condition \gls{tmp} crystals for cytochrome P450 \cite{Duan2004}.
@@ -113,7 +113,7 @@ Still, the challenge remained of getting crystals of sufficient quality for x\--
 Although many \gls{tmp}s readily formed low\--resolution 2D crystals for cryo\--\gls{em}~\cite{Vinothkumar2015, Raunser2009}, and genome sequencing resulted in an exponential increase in structures derived from x\--ray crystallography \cite{Vinothkumar2010}, the dependency on crystallising \gls{tmp}s has always resulted in a hindrance.
 
 In a full circle from \gls{em} study of the fluid mosaic model in the 1970s \cite{Singer1972}, once more \gls{em} techniques were applied to \gls{tmp}s as single molecules (Figure \ref{fig:revolution}A).
-This method escapes the need for \gls{tmp} crystals \cite{Vinothkumar2015} and the presence of the sub 3\angstrom~ structures \cite{Grant2015, Bartesaghi2015} utilising this method have exceeded the near atomistic resolutions that were called a revolution in \gls{tmp} biology, not a year earlier \cite{Kühlbrandt2014}.
+This method escapes the need for \gls{tmp} crystals \cite{Vinothkumar2015} and the presence of the sub 3\angstrom~ structures \cite{Grant2015, Bartesaghi2015} utilising this method have exceeded the near atomistic resolutions that were called a revolution in \gls{tmp} biology, not a year earlier \cite{Kuhlbrandt2014}.
 
 
 \subsection{The role of bioinformatics in transmembrane biology}
@@ -450,9 +450,9 @@ In this thesis we focus on co\--translation via the Sec pathway, and on the post
 
 The Sec pathway is conserved across all life~\cite{Cao2003} and is facilitated by the heterotrimeric SecYEG (prokaryotic) and Sec61 (eukaryotic) translocons.
 SecYEG targets proteins to the \gls{pm} (inner membrane) of bacteria.
-In bacteria, nearly all \gls{tmp}s are inserted by either the Sec pathway via  SecYEG machinery, or by the structurally unrelated the 5\--fold more abundant YidC machinery \cite{Drew2003, Dalby2014}, and proteins can often use either pathway.
+In bacteria, nearly all \gls{tmp}s are inserted by either the Sec pathway via  SecYEG machinery, or by the structurally unrelated the 5\--fold more abundant YidC machinery \cite{Drew2003, Dalbey2014}, and proteins can often use either pathway.
 Sec61 targets proteins to the \gls{er} of eukaryotic cells.
-Broadly speaking, these proteins translocate hydrophilic peptides across a membrane whilst also integrating sufficiently hydrophobic sequences to the membrane~\cite{Junne2010, Rapoport2012, Shao2011, Cymer2015}.
+Broadly speaking, these proteins translocate hydrophilic peptides across a membrane whilst also integrating sufficiently hydrophobic sequences to the membrane~\cite{Junne2010, Park2012, Shao2011, Cymer2015}.
 In bacteria, the SecY protein is partly encircled by SecE (Sec61$\gamma$ in eukaryotes) which enhances it's stability in the membrane \cite{Kihara1995}.
 SecG is made up of two \gls{tmh}s and a cytosolic loop.
 It has been associated with SecA dependent translocation of secretory proteins \cite{Duong1997, Koch2000}.
@@ -488,7 +488,7 @@ This would explain why it also interacts with \gls{ta} proteins \gls{tmh}s \cite
 Pulldown experiments revealed that the \gls{emc} stabilised the synthesised \gls{tmp}s and recruited chaperones (both substrate specific and general) that allowed unstable \gls{tmp}s to achieve viable conformations allowing function in the \gls{er} and transport to the Golgi.
 In the absence of the \gls{emc}, UPS (a proteasome) degrades the membrane proteins.
 
-This dual function of the \gls{emc} is analogous with YidC \cite{Shurtleff2018} in bacteria which has the role of an insertase \cite{Samuelson2000, Drew2003, Dalby2014} as well as interacting with SecYEG to stabilise translocated \gls{tmp}s \cite{Nagamori2004}.
+This dual function of the \gls{emc} is analogous with YidC \cite{Shurtleff2018} in bacteria which has the role of an insertase \cite{Samuelson2000, Drew2003, Dalbey2014} as well as interacting with SecYEG to stabilise translocated \gls{tmp}s \cite{Nagamori2004}.
 
 \subsection{Signal peptides}
 \gls{sp}s are short peptide sequences present at the N-terminus of most secretory pathway destined proteins in both prokaryotes and eukaryotes.
@@ -553,7 +553,7 @@ An N-terminal \gls{sp} sequence allows the protein to pass through the inner mem
 Instead of cotranslational insertion, SecB transports the nascent polypeptide chain to the Sec translocon on the inner membrane \cite{Bechtluft2010}.
 $\beta$\--sheets do not trigger the opening of the lateral gate \cite{Ulrich2015}.
 Once in the periplasm, the \gls{sp} is cleaved \cite{Paetzel2014} and chaperones, such as the redundant SurA \cite{Lazar1996, Volokhina2011}, DegQ, and Skp \cite{Volokhina2011}, bind to the protein to prevent premature folding.
-Once at the inner surface, the BAM complex assembles and integrates the $\beta$ barrel protein into the membrane \cite{Wu2005, Hagan2011} via a lateral opening of one of the BAM subunits, BamA \cite{Noinaj2014}.
+Once at the inner surface, the BAM complex assembles and integrates the $\beta$ barrel protein into the membrane \cite{Wu2005, Hagan2010} via a lateral opening of one of the BAM subunits, BamA \cite{Noinaj2014}.
 
 \begin{figure}[ht]
 \centering
@@ -575,8 +575,8 @@ Unlike in the bacterial outer membrane, $\beta$-barrel proteins are rare in the 
 There is Tom40, Tob55, two isoforms of a porin, and Mdm10 \cite{Ulrich2015}.
 And yet, indeed it was shown that a $\beta$ barrel protein fragments not found in the eukaryotic proteome called trimeric autotransporter can be recognised and assembled by the mitochondria \cite{Muller2011}.
 Since there is no need to cross the inner membrane, mitochondrial proteins do not have the cleavable \gls{sp}, or any other known targeting signal \cite{Ulrich2015}.
-After cytosolic ribosomes complete the translation, the $\beta$ barrel proteins are recognised on the mitochondrial surface by the \gls{tom} complex import receptors, handed to the $\beta$ barrel protein Tom40 which is the central machinery for mitochondrial protein import \cite{Chachinska2009}.
-After being processed through the \gls{tom} machinery, hexameric chaperone complexes of Tim8 in complex with Tim13, and Tim9 in complex with 10 to the TOB complex (also known as the SAM complex) also on the outer membrane which integrates the $\beta$ barrel protein into the membrane \cite{Wiedermann2003, Paschen2003, Gentle2004}.
+After cytosolic ribosomes complete the translation, the $\beta$ barrel proteins are recognised on the mitochondrial surface by the \gls{tom} complex import receptors, handed to the $\beta$ barrel protein Tom40 which is the central machinery for mitochondrial protein import \cite{Chacinska2009}.
+After being processed through the \gls{tom} machinery, hexameric chaperone complexes of Tim8 in complex with Tim13, and Tim9 in complex with 10 to the TOB complex (also known as the SAM complex) also on the outer membrane which integrates the $\beta$ barrel protein into the membrane \cite{Wiedenmann2003, Paschen2003, Gentle2004}.
 
 Whereas mitochondria originated from the ancestral incorporation of $\alpha$\--proteobacteria \cite{Gray1999}, chloroplasts were thought to originate from the incorporation of cyanobacterium \cite{McFadden2001}.
 Similarly to mitochondrial $\beta$ barrel proteins, there is no cleavable targeting \gls{sp} targeting for the chloroplast since they integrate on the internal side of the membrane, however much less is known about the precise insertion machinery of $\beta$ barrel proteins at a molecular level in chloroplasts \cite{Ulrich2015}.
