--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -59,7 +59,7 @@ The journey of the \gls{tmh} through this machinery has been studied using both 
         These vary in composition and size between eukaryotes and prokaryotes.
         PTC refers to the peptidase transferase centre, a high conserved catalytic site across all the kingdoms of life that performs the translation of RNA to amino acid polypeptides.
         After translation, the nascent peptide moves down the exit tunnel located in the larger ribosomal subunit.
-        There is evidence that the secondary structural elements of  \gls{tmh}s in ion channels are pre\--folded in the ribosomal exit tunnel \cite{Lu2005. Tu2010a, Tu2014, Kudva2018}.
+        There is evidence that the secondary structural elements of  \gls{tmh}s in ion channels are pre\--folded in the ribosomal exit tunnel \cite{Lu2005, Tu2010a, Tu2014, Kudva2018}.
         The ribosome hands the nascent chain to the translocon.
         Once the plug moves to expose the translocon pore, the translocon has a hydrophobic core which regulates the integration of the \gls{tmh} via the lateral gate \cite{Junne2010}.
 }
@@ -78,10 +78,10 @@ This could be either the \gls{tmh} finally coming into contact with the cytoplas
 
 The ribosome passes the nascent chain to the Sec translocon machinery.
 Like the ribosome, the Sec pathway is widely conserved across life \cite{Cao2003}.
-Sec61 (in eukaryotes) and SecYEG (in prokaryotes) translocate hydrophilic peptides across a membrane whilst also integrating sufficiently hydrophobic sequences to the membrane~\cite{Junne2010, Rapoport2012, Shao2011, Cymer2015}.
+Sec61 (in eukaryotes) and SecYEG (in prokaryotes) translocate hydrophilic peptides across a membrane whilst also integrating sufficiently hydrophobic sequences to the membrane~\cite{Junne2010, Park2012, Shao2011, Cymer2015}.
 SecY in prokaryotes or Sec61$\alpha$ in eukaryotes are \gls{tmp}s with 10 \gls{tmh}s that perform the translocation.
 These proteins have a lumenal plug~\cite{Tam2005, Junne2006} and a constricted core to prevent permeability whilst the protein is idle~\cite{Junne2010}.
-During translocation the plug moves out of the pore \cite{Li2016}, the channel is in an open unconstricted state \cite{Junne2010}, and a lateral gate of TMH2 and TMH7 \cite{Berg} periodically opens to release a \gls{tmh} to the membrane environment if sufficient hydrophobicity is detected in the peptide chain \cite{Junne2010, Egea2010}(Figure \ref{fig:sequential-insertion}).
+During translocation the plug moves out of the pore \cite{Li2016}, the channel is in an open unconstricted state \cite{Junne2010}, and a lateral gate of TMH2 and TMH7 \cite{VandenBerg2004} periodically opens to release a \gls{tmh} to the membrane environment if sufficient hydrophobicity is detected in the peptide chain \cite{Junne2010, Egea2010}(Figure \ref{fig:sequential-insertion}).
 
 
 \subsection{Co-operative transmembrane helix insertion by the translocon-ribosome complex.}
@@ -105,9 +105,9 @@ It was shown that \gls{tmh}s can stay in association with the translocon in orde
 Not only this, but it was shown that there is a direct interaction between the \gls{tmh}s; more recently \gls{ap}s were used to show pulling forces between a \gls{tmh} and more C-terminally located \gls{tmh} during the C-terminal \gls{tmh} membrane partitioning from the translocon \textit{in vivo} \cite{Cymer2013}.
 This could be facilitated during the probing of a \gls{tmh} from the translocon as the lateral gate ``cracks'' open in an intermediate stage before the \gls{tmh} satisfies the full hydrophobic requirements to open the gate fully, an intermediate stage observed in a SecY crystal structure \cite{Egea2010}.
 
-16 marginally hydrophobic \gls{tmh}s were screened and revealed that independently they did not efficiently insert via the translocon into the \gls{er} \cite{Hedin2009}.
+16 marginally hydrophobic \gls{tmh}s were screened and revealed that independently they did not efficiently insert via the translocon into the \gls{er} \cite{Hedin2010}.
 The study showed that in the presence of the neighbouring loops and \gls{tmh}s, insertion often became sufficient with the exception of two of the marginally hydrophobic \gls{tmh}s.
-The orientational preference of neighbouring \gls{tmh}s was shown to increase insertion efficiency into the \gls{er} of a marginally hydrophobic \gls{tmh} \cite{Öjemalm2012}.
+The orientational preference of neighbouring \gls{tmh}s was shown to increase insertion efficiency into the \gls{er} of a marginally hydrophobic \gls{tmh} \cite{Ojemalm2012}.
 A glycosylation study of three relatively polar \gls{tmh}s revealed that proteins have even evolved to exhibit stronger ``positive\--inside'' tendencies when following another \gls{tmh} \cite{Virkki2014}.
 Subsequent \gls{tmh}s with a strong topological preference (increased arginine presence) increase the insertion potential of relatively polar \gls{tmh}s, however, no specific interaction between the \gls{tmh}s was responsible.
 The nascent polypeptide in the cavity between the ribosome and the translocon can
@@ -463,7 +463,7 @@ A jump of hydrophobicity is observed in TMH2 (hydrophobicity = 1.05) to TMH3 (hy
 Marginally hydrophobic \gls{tmh}s are often essential physiological components for carrying out complex intra-membrane tasks beyond membrane anchorage, and widely prevalent among \gls{tmp}s \cite{Hessa2007}.
 However, this presents a significant biophysical and biological challenge; how to incorporate and maintain such necessarily relatively polar \gls{tmh}s into the membrane.
 We show that among certain classes of \gls{tmp}s that this is a conserved issue.
-There is evidence to suggest that multipass \gls{tmh} arrangements work cooperatively during translocation and insertion to achieve correct folding of marginally hydrophobic \gls{tmh}s \cite{Ismail2008, Virkki2014, Sadlish2005, Cross2009, Cymer2013, Sato2002, Sato2003, Zhang2007, Cymer2015, Tu2000, Tu2014, Öjemalm2012} (Figure \ref{fig:Good-bad-TMH}).
+There is evidence to suggest that multipass \gls{tmh} arrangements work cooperatively during translocation and insertion to achieve correct folding of marginally hydrophobic \gls{tmh}s \cite{Ismail2008, Virkki2014, Sadlish2005, Cross2009, Cymer2013, Sato2002, Sato2003, Zhang2007, Cymer2015, Tu2000, Tu2014, Ojemalm2012} (Figure \ref{fig:Good-bad-TMH}).
 
 \begin{figure}[!ht]
 \centering
