no more reference failures

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -86,7 +86,7 @@ Worryingly, because of this oversight, it appears that between 2.1\% and 13.6\% 
 
 \subsection{The transmembrane protein revolution}\label{section:revolution}
 Over the last decade or so, several significant steps have been made toward overcoming the challenges in finding the structure of \gls{tmp}s.
-Firstly, improvements in expression and purification occurred thanks to cleavable green fluorescent protein (allowing protein tracking during purification) \cite{Drew2005, Kawate2006} and antibody tagging for purification \cite{Eshagi2005} at the colony level \cite{Cornvik2005} greatly increased the throughput of \gls{tmp} expression and purification.
+Firstly, improvements in expression and purification occurred thanks to cleavable green fluorescent protein (allowing protein tracking during purification) \cite{Drew2005, Kawate2006} and antibody tagging for purification \cite{Eshaghi2005} at the colony level \cite{Cornvik2005} greatly increased the throughput of \gls{tmp} expression and purification.
 
 \begin{figure}[ht!]
 \centering
@@ -576,7 +576,7 @@ There is Tom40, Tob55, two isoforms of a porin, and Mdm10 \cite{Ulrich2015}.
 And yet, indeed it was shown that a $\beta$ barrel protein fragments not found in the eukaryotic proteome called trimeric autotransporter can be recognised and assembled by the mitochondria \cite{Muller2011}.
 Since there is no need to cross the inner membrane, mitochondrial proteins do not have the cleavable \gls{sp}, or any other known targeting signal \cite{Ulrich2015}.
 After cytosolic ribosomes complete the translation, the $\beta$ barrel proteins are recognised on the mitochondrial surface by the \gls{tom} complex import receptors, handed to the $\beta$ barrel protein Tom40 which is the central machinery for mitochondrial protein import \cite{Chacinska2009}.
-After being processed through the \gls{tom} machinery, hexameric chaperone complexes of Tim8 in complex with Tim13, and Tim9 in complex with 10 to the TOB complex (also known as the SAM complex) also on the outer membrane which integrates the $\beta$ barrel protein into the membrane \cite{Wiedenmann2003, Paschen2003, Gentle2004}.
+After being processed through the \gls{tom} machinery, hexameric chaperone complexes of Tim8 in complex with Tim13, and Tim9 in complex with 10 to the TOB complex (also known as the SAM complex) also on the outer membrane which integrates the $\beta$ barrel protein into the membrane \cite{Wiedemann2003, Paschen2003, Gentle2004}.
 
 Whereas mitochondria originated from the ancestral incorporation of $\alpha$\--proteobacteria \cite{Gray1999}, chloroplasts were thought to originate from the incorporation of cyanobacterium \cite{McFadden2001}.
 Similarly to mitochondrial $\beta$ barrel proteins, there is no cleavable targeting \gls{sp} targeting for the chloroplast since they integrate on the internal side of the membrane, however much less is known about the precise insertion machinery of $\beta$ barrel proteins at a molecular level in chloroplasts \cite{Ulrich2015}.
