--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -198,7 +198,7 @@ The Hessa biological scale originally reported positional dependencies that affe
 When stratifying \gls{tmh}s by hydrophobicity and sequence information entropy, there is a clear distinction between anchoring \gls{tmh}s and those with a function beyond anchoring.
 The TMSOC z-score quantifies this relationship and is calculated by equation \ref{equation:zscoreterm2}.
 
-\begin{equation} \label{zscoreterm2}
+\begin{equation} \label{equation:zscoreterm2}
 z({x}_{\Phi},{x}_{c})={(-1)}^{s}\left[\frac{{({x}_{\Phi}-{\mu}_{\Phi})}^{2}}{{\sigma}_{\phi}^{2}}+\frac{{({x}_{c}-{\mu}_{c})}^{2}}{{\sigma}_{c}^{2}}\right]
 \end{equation}
 
@@ -421,7 +421,7 @@ This is compounded by the fact that the White and Wimley scale (used to generate
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/Ion-channel-information-entropy}
 		\captionof{figure}[Sequence entropy is unsuitable for assessing function in TMH4 of ion channels.]{\textbf{Sequence entropy is unsuitable for assessing function in TMH4 of ion channels.}
-    A) The TMSOC z-score \cite{Wong2011, Wong2012} of \gls{tmh}s from the ion channel dataset used in Figure \ref{KD-ion-channels}A.
+    A) The TMSOC z-score \cite{Wong2011, Wong2012} of \gls{tmh}s from the ion channel dataset used in Figure \ref{fig:KD-ion-channels}A.
     B) The sequence information entropy of those same \gls{tmh}s.
     }
 
