--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,95 @@
+@article{Hagan2010,
+abstract = {Beta-barrel membrane proteins in Gram-negative bacteria, mitochondria, and chloroplasts are assembled by highly conserved multi-protein complexes. The mechanism by which these molecular machines fold and insert their substrates is poorly understood. It has not been possible to dissect the folding and insertion pathway because the process has not been reproduced in a biochemical system. We purified the components that fold and insert Escherichia coli outer membrane proteins and reconstituted beta-barrel protein assembly in proteoliposomes using the enzymatic activity of a protein substrate to report on its folding state. The assembly of this protein occurred without an energy source but required a soluble chaperone in addition to the multi-protein assembly complex.},
+author = {Hagan, Christine L. and Kim, Seokhee and Kahne, Daniel},
+doi = {10.1126/science.1188919},
+isbn = {1095-9203 (Electronic)$\backslash$n0036-8075 (Linking)},
+issn = {00368075},
+journal = {Science},
+number = {5980},
+pages = {890--892},
+pmid = {20378773},
+title = {{Reconstitution of outer membrane protein assembly from purified components}},
+volume = {328},
+year = {2010}
+}
+@article{Eshaghi2005,
+author = {Eshaghi, S. and Hedr{\'{e}}n, Marie and Nasser, Marina Ignatushchenko Abdel and Hammarberg, Tove and Thornell, Anders and Nordlund, P{\"{a}}r},
+doi = {10.1110/ps.041127005},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Eshaghi et al. - 2005 - An efficient strategy for high-throughput expression screening of recombinant integral membrane proteins(2).pdf:pdf},
+issn = {0961-8368},
+journal = {Protein Science},
+keywords = {BL21,BL21(DE3),C41,C41(DE3),C43,C43(DE3),DDM,E. coli,Escherichia coli,FC12,FOS‐CHOLINE‐12,HTP,detergent screen,dodecyl maltoside,high‐throughput,membrane proteins,multiparameter,parallel screen},
+month = {mar},
+number = {3},
+pages = {676--683},
+publisher = {Wiley-Blackwell},
+title = {{An efficient strategy for high-throughput expression screening of recombinant integral membrane proteins}},
+url = {http://doi.wiley.com/10.1110/ps.041127005},
+volume = {14},
+year = {2005}
+}
+@article{Paetzel2014,
+abstract = {Type I signal peptidase is the enzyme responsible for cleaving off the amino-terminal signal peptide from proteins that are secreted across the bacterial cytoplasmic membrane. It is an essential membrane bound enzyme whose serine/lysine catalytic dyad resides on the exo-cytoplasmic surface of the bacterial membrane. This review discusses the progress that has been made in the structural and mechanistic characterization of Escherichia coli type I signal peptidase (SPase I) as well as efforts to develop a novel class of antibiotics based on SPase I inhibition. This article is part of a Special Issue entitled: Protein trafficking and secretion in bacteria. Guest Editors: Anastassios Economou and Ross Dalbey.},
+author = {Paetzel, Mark},
+doi = {10.1016/J.BBAMCR.2013.12.003},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Paetzel - 2014 - Structure and mechanism of Escherichia coli type I signal peptidase.pdf:pdf},
+issn = {0167-4889},
+journal = {Biochimica et Biophysica Acta (BBA) - Molecular Cell Research},
+month = {aug},
+number = {8},
+pages = {1497--1508},
+publisher = {Elsevier},
+title = {{Structure and mechanism of Escherichia coli type I signal peptidase}},
+url = {https://www.sciencedirect.com/science/article/pii/S0167488913004229},
+volume = {1843},
+year = {2014}
+}
+@article{Shao2011,
+abstract = {Integral membrane proteins of the cell surface and most intracellular compartments of eukaryotic cells are assembled at the endoplasmic reticulum. Two highly conserved and parallel pathways mediate membrane protein targeting to and insertion into this organelle. The classical cotranslational pathway, utilized by most membrane proteins, involves targeting by the signal recognition particle followed by insertion via the Sec61 translocon. A more specialized posttranslational pathway, employed by many tail-anchored membrane proteins, is composed of entirely different factors centered around a cytosolic ATPase termed TRC40 or Get3. Both of these pathways overcome the same biophysical challenges of ferrying hydrophobic cargo through an aqueous milieu, selectively delivering it to one among several intracellular membranes and asymmetrically integrating its transmembrane domain(s) into the lipid bilayer. Here, we review the conceptual and mechanistic themes underlying these core membrane protein insertion pathway...},
+author = {Shao, Sichen and Hegde, Ramanujan S.},
+doi = {10.1146/annurev-cellbio-092910-154125},
+issn = {1081-0706},
+journal = {Annual Review of Cell and Developmental Biology},
+keywords = {protein translocation,targeting},
+month = {nov},
+number = {1},
+pages = {25--56},
+publisher = { Annual Reviews },
+title = {{Membrane Protein Insertion at the Endoplasmic Reticulum}},
+url = {http://www.annualreviews.org/doi/10.1146/annurev-cellbio-092910-154125},
+volume = {27},
+year = {2011}
+}
+@article{Rosenbusch2001,
+abstract = {Three different methods are currently used for the study of high-resolution structures of membrane proteins: X-ray crystallography, electron crystallography, and nuclear magnetic resonance (NMR) spectroscopy. Thus far, all methods combined have yielded a rather modest number of crystal structures that have been solved at the atomic level. It is hypothesized here that different methods may select different populations of proteins on the basis of various properties. Thus, protein stability may be a significant factor in the formation of three-dimensional (3D) crystals from detergent solutions, since exposure of hydrophobic protein zones to water may cause structural perturbation or denaturation in conformationally labile proteins. This is different in the formation of two-dimensional (2D) crystals where a protein remains protected in its native membrane environment. A biological selection mechanism may therefore be operative in that highly ordered lattices may form only if strong protein–protein interactions are relevant in vivo, thereby limiting the number of proteins that are amenable to electron crystallography. Keeping a protein in a bilayer environment throughout 3D crystallization maintains the lateral pressure existing in native membranes. This can be accomplished by using lipidic cubic phases. Alternatively, the hydrophobic interface of a membrane protein may be spared from contact with water by crystallization from organic solvents where the polar caps are protected in reverse micelles by using appropriate detergents. Some of the criteria that are useful in optimizing the various approaches are given. While the usefulness of complementary methods seems obvious, the results presented may be particularly critical in recognizing key problems in other structural approaches.},
+author = {Rosenbusch, J.P. and Lustig, A. and Grabo, M. and Zulauf, M. and Regenass, M.},
+doi = {10.1016/S0968-4328(00)00021-4},
+issn = {0968-4328},
+journal = {Micron},
+month = {jan},
+number = {1},
+pages = {75--90},
+publisher = {Pergamon},
+title = {{Approaches to determining membrane protein structures to high resolution: do selections of subpopulations occur?}},
+url = {https://www.sciencedirect.com/science/article/pii/S0968432800000214},
+volume = {32},
+year = {2001}
+}
+@article{Lu2018,
+abstract = {The computational design of transmembrane proteins with more than one membrane-spanning region remains a major challenge. We report the design of transmembrane monomers, homodimers, trimers, and tetramers with 76 to 215 residue subunits containing two to four membrane-spanning regions and up to 860 total residues that adopt the target oligomerization state in detergent solution. The designed proteins localize to the plasma membrane in bacteria and in mammalian cells, and magnetic tweezer unfolding experiments in the membrane indicate that they are very stable. Crystal structures of the designed dimer and tetramer-a rocket-shaped structure with a wide cytoplasmic base that funnels into eight transmembrane helices-are very close to the design models. Our results pave the way for the design of multispan membrane proteins with new functions.},
+author = {Lu, Peilong and Min, Duyoung and DiMaio, Frank and Wei, Kathy Y. and Vahey, Michael D. and Boyken, Scott E. and Chen, Zibo and Fallas, Jorge A. and Ueda, George and Sheffler, William and Mulligan, Vikram Khipple and Xu, Wenqing and Bowie, James U. and Baker, David},
+doi = {10.1126/science.aaq1739},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lu et al. - 2018 - Accurate computational design of multipass transmembrane proteins.pdf:pdf},
+isbn = {1311977120},
+issn = {10959203},
+journal = {Science},
+number = {6379},
+pages = {1042--1046},
+pmid = {29496880},
+title = {{Accurate computational design of multipass transmembrane proteins}},
+volume = {359},
+year = {2018}
+}
 @article{Danielli1935,
 abstract = {Page 1.           JAMES FREDERIC  AND HUGH  Physiological Laboratory },
 author = {Danielli, James Frederic and Davson, Hugh},
@@ -73,7 +165,7 @@ url = {http://rspa.royalsocietypublishing.org/cgi/doi/10.1098/rspa.1943.0040},
 volume = {184},
 year = {1945}
 }
-@article{PMID:18134678,
+@article{Hodgekin1949,
 author = {Hodgekin, D C},
 issn = {0001-866X},
 journal = {Advancement of science},
@@ -95,8 +187,8 @@ url = {https://www.nobelprize.org/prizes/chemistry/1988/michel/auto-biography/},
 urldate = {2018-08-22},
 year = {2018}
 }
-@article{Nature,
-author = {Nature, K Lonsdale - and undefined 1928},
+@article{Lonsdale1928,
+author = {Nature, K Lonsdale - and 1928, Undefined},
 journal = {nature.com},
 title = {{The structure of the benzene ring}},
 url = {https://www.nature.com/articles/122810c0}
@@ -334,13 +426,19 @@ url = {https://www.sciencedirect.com/science/article/pii/S0003986104000633?via{\
 volume = {424},
 year = {2004}
 }
-@article{TimothyH.Bayburt2002,
-abstract = {Nanoparticulate phospholipid bilayer disks were assembled from phospholipid and a class of amphipathic helical proteins termed membrane scaffold proteins (MSP). Several different MSPs were produced in high yield using a synthetic gene and a heterologous expression system and purified to homogeneity by a one-step purification. The self-assembly process begins with a mixture of the phospholipid and MSP in the presence of a detergent. Upon removal of detergent, 10-nm diameter particles form containing either saturated or unsaturated phospholipid. The ratio of components in the initial mixture was found to be crucial for formation of a monodisperse population of nanoparticles. Exploration of the phase diagram of the lamellar to phospholipid−detergent mixed micelle transition reveals that self-assembly proceeds from the mixed micellar phase. In this case a homogeneous and monodisperse population is formed. In contrast, particle formation from the detergent−phospholipid lamellar phase results in altered size, y...},
-author = {{Timothy H. Bayburt}, † and and {Yelena V. Grinkova}, † and {Stephen G. Sligar*}, †,‡,{\S}},
-doi = {10.1021/NL025623K},
-publisher = { American Chemical Society },
+@article{Bayburt2002,
+abstract = {Nanoparticulate phospholipid bilayer disks were assembled from phospholipid and a class of amphipathic helical proteins termed membrane scaffold proteins (MSP). Several different MSPs were produced in high yield using a synthetic gene and a heterologous expression system and purified to homogeneity by a one-step purification. The self-assembly process begins with a mixture of the phospholipid and MSP in the presence of a detergent. Upon removal of detergent, 10-nm diameter particles form containing either saturated or unsaturated phospholipid. The ratio of components in the initial mixture was found to be crucial for formation of a monodisperse population of nanoparticles. Exploration of the phase diagram of the lamellar to phospholipid−detergent mixed micelle transition reveals that self-assembly proceeds from the mixed micellar phase. In this case a homogeneous and monodisperse population is formed. In contrast, particle formation from the detergent−phospholipid lamellar phase results in altered size, yield, composition, and heterogeneity of the resultant particles. The nanodisks contain approximately 160 saturated or 125 unsaturated lipids and can be formed from designed amphipathic $\alpha$-helical scaffold proteins. The 10-nm particles can thus contain two molecules of MSP1 or a single molecule of an MSP1 fusion (MSP2). The phospholipid bilayer main phase transition temperature is preserved in the nanodisks as determined by fluorescence spectroscopy. Scanning probe microscopy shows a monolayer of nanodisks on a mica surface with a diameter of 10 nm and the thickness of a single phospholipid bilayer (5.7 nm), confirming the presence of a bilayer domain. The gentle method of self-assembly and robustness of the resulting nanodisks provides a means for generating soluble lipid bilayer membranes on the nanometer scale and opens the possibility of using these nanostructures to incorporate single membrane proteins into a native-like environment. Nanoparticulate phospholipid bilayer disks were assembled from phospholipid and a class of amphipathic helical proteins termed membrane scaffold proteins (MSP). Several different MSPs were produced in high yield using a synthetic gene and a heterologous expression system and purified to homogeneity by a one-step purification. The self-assembly process begins with a mixture of the phospholipid and MSP in the presence of a detergent. Upon removal of detergent, 10-nm diameter particles form containing either saturated or unsaturated phospholipid. The ratio of components in the initial mixture was found to be crucial for formation of a monodisperse population of nanoparticles. Exploration of the phase diagram of the lamellar to phospholipid−detergent mixed micelle transition reveals that self-assembly proceeds from the mixed micellar phase. In this case a homogeneous and monodisperse population is formed. In contrast, particle formation from the detergent−phospholipid lamellar phase results in altered size, yield, composition, and heterogeneity of the resultant particles. The nanodisks contain approximately 160 saturated or 125 unsaturated lipids and can be formed from designed amphipathic $\alpha$-helical scaffold proteins. The 10-nm particles can thus contain two molecules of MSP1 or a single molecule of an MSP1 fusion (MSP2). The phospholipid bilayer main phase transition temperature is preserved in the nanodisks as determined by fluorescence spectroscopy. Scanning probe microscopy shows a monolayer of nanodisks on a mica surface with a diameter of 10 nm and the thickness of a single phospholipid bilayer (5.7 nm), confirming the presence of a bilayer domain. The gentle method of self-assembly and robustness of the resulting nanodisks provides a means for generating soluble lipid bilayer membranes on the nanometer scale and opens the possibility of using these nanostructures to incorporate single membrane proteins into a native-like environment.},
+author = {Bayburt, Timothy H. and Grinkova, Yelena V. and Sligar, Stephen G.},
+doi = {10.1021/nl025623k},
+isbn = {1530-6984},
+issn = {15306984},
+journal = {Nano Letters},
+number = {8},
+pages = {853--856},
+publisher = {American Chemical Society},
 title = {{Self-Assembly of Discoidal Phospholipid Bilayer Nanoparticles with Membrane Scaffold Proteins}},
 url = {https://pubs.acs.org/doi/abs/10.1021/nl025623k},
+volume = {2},
 year = {2002}
 }
 @article{Cornvik2005,
@@ -1889,6 +1987,7 @@ year = {2005}
 abstract = {The determination of the crystal structures of small-molecule transporters has shed light on the conformational changes that take place during structural isomerization from outward- to inward-facing states. Rather than using a simple rocking movement of two bundles around a central substrate-binding site, it has become clear that even the most simplistic transporters utilize rearrangements of nonrigid bodies. In the most dramatic cases, one bundle is fixed while the other, structurally divergent, bundle carries the substrate some 18 {\AA} across the membrane, which in this review is termed an elevator alternating-access mechanism. Here, we compare and contrast rocker-switch, rocking-bundle, and elevator alternating-access mechanisms to highlight shared features and novel refinements to the basic alternating-access model.},
 author = {Drew, David and Boudker, Olga},
 doi = {10.1146/annurev-biochem-060815-014520},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Drew, Boudker - 2016 - Shared Molecular Mechanisms of Membrane Transporters.pdf:pdf},
 isbn = {978-0-8243-0885-8},
 issn = {0066-4154},
 journal = {Annual Review of Biochemistry},
@@ -1905,6 +2004,7 @@ year = {2016}
 abstract = {The ideas that proteins might possess specific functions without being uniquely folded into rigid 3D-structures and that these floppy polypeptides might constitute a noticeable part of any given proteome would have been considered as a preposterous fiction 15 or even 10 years ago. The situation has changed recently, and the existence of functional yet intrinsically disordered proteins and regions has become accepted by a significant number of protein scientists. These fuzzy objects with fuzzy structures and fuzzy functions are among the most interesting and attractive targets for modern protein research. This review summarizes some of the major discoveries and breakthroughs in the field of intrinsic disorder by representing related concepts and definitions. {\textcopyright} 2011 Elsevier Ltd. All rights reserved.},
 author = {Uversky, Vladimir N.},
 doi = {10.1016/j.biocel.2011.04.001},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Uversky - 2011 - Intrinsically disordered proteins from A to Z.pdf:pdf},
 isbn = {1878-5875 (Electronic)$\backslash$r1357-2725 (Linking)},
 issn = {13572725},
 journal = {International Journal of Biochemistry and Cell Biology},
